@@ -16,6 +16,7 @@ WISH: just for fun, do shade and tint with XRender.
 	- new option -pty-fd that makes the terminal a slave
           that uses an existing pty for I/O instead of starting
           a command.
+        - implement enough of XEMBED to allow for correct focus.
         - SYNCCVS. backported bugfixes done to rxvt
           (sourceforge bugs #1028739, #1028732), except for
           pts/%s fix as it seems to collide with freebsd,
@@ -26,6 +27,8 @@ WISH: just for fun, do shade and tint with XRender.
           needs to be US-ASCII all the time).
         - toggle default application keypad/cursor mode to help
           some apps who fail to set the correct mode.
+        - check for WM_PROTOCOLS type in ClientMessage as to
+          not destroy the window for other types of messages.
 	- remove shared library (or any library) support - it is
           of no use currently (and -embed is a better way to embed
           rxvt-unicode).
